# rinha-compiler

./: .ocamlformat  Dockerfile  README.md  dune-project  example.txt  flake.nix  rinha.opam
examples/: fib.json
files/: fib_print.json  fib_print.rinha  print.rinha  sum_print.json  sum_print.rinha
nix/: default.nix  overlay.nix  shell.nix
src/: ast.ml  dune  evaluator.ml  main.ml  value.ml
src/lib/: ast.ml  dune  evaluator.ml  utils.ml  value.ml
test/: check.ml  dune  integration.ml  runner.ml
